@@ -2145,6 +2145,18 @@ current lookahead token. It is legal to invoke this function only after at
 least one token has been offered to the parser via \verb+offer+. In other
 words, it is illegal to invoke it in an initial state.
 
+%% val has_default_reduction
+
+\begin{verbatim}
+  val has_default_reduction: env -> bool
+\end{verbatim}
+
+The function \verb+has_default_reduction+
+tells whether the parser is about to perform a default reduction.
+In particular, when applied to an environment \verb+env+ taken from a result of
+the form \verb+AboutToReduce (env, prod)+, it tells whether the reduction
+that is about to take place is a default reduction.
+
 % ------------------------------------------------------------------------------
 
 \subsection{Inspection API}
